--- a/emmabeauty/index.html
+++ b/emmabeauty/index.html
@@ -1,23 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <link rel="icon" href="../emmabeauty/img/favicon.png">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../emmabeauty/css/style.css">
     <title>EmmaBeauty</title>
+
 </head>
-<body>
 
-<div>
-    <h1> Emma Beauty</h1>
-</div>
-<div>
-    <button type="button" class="btn btn-info inicio">Click para ingresar</button>
-</div>
+<body class="color-fondo">
+    <nav class=" navbar-inicio navbar bg-body-tertiary">
+        <div class="container-fluid">
+            <img class="logo" src="../emmabeauty/img/icons8-cuidado-del-spa-64.png" alt="">
+            <span class="navbar-brand mb-0 h1"></span>
+        </div>
+    </nav>
+    <section>
+        <div class="banner">
+            <h1 class="bordesh1 texto-banner">Emma Beauty</h1>
+            <button type="button " class="btn btn-outline-info boton-ingreso">Click para ingresar</button>
+            </a>
+        </div>
 
 
 
-
-<script src="../emmabeauty/js/main.js"></script>
+        <script src="../emmabeauty/js/main.js"></script>
 </body>
+
 </html>
