--- a/emmabeauty/index.html
+++ b/emmabeauty/index.html
@@ -32,7 +32,7 @@
     <section>
         <div class="banner">
             <h1 class="bordesh1 texto-banner">Emma Beauty</h1>
-            <button type="button " class="btn btn-outline-info boton-ingreso">Click para ingresar</button>
+            <button onclick="servicios()" type="button" class="btn btn-dark">Click para ingresar</button>
             </a>
         </div>
 
