--- a/emmabeauty/index.html
+++ b/emmabeauty/index.html
@@ -66,5 +66,10 @@
 
         <script src="../emmabeauty/js/main.js"></script>
 </body>
-
+<footer class="footer ">
+    <a href="https://www.instagram.com/" class="link-instagram" target="_blank"><img
+            class="icon" src="./img/icons8-instagram (1).svg"></a>
+    <a href="https://wa.link/axdlll" target="_blank"><img class="icon"
+            src="./img/icons8-whatsapp (1).svg"></a>
+</footer>
 </html>
