--- a/emmabeauty/index.html
+++ b/emmabeauty/index.html
@@ -36,45 +36,68 @@
             </a>
         </div>
         <div class="tarjeta-index">
+            <div class="d-flex justify-content-center tarjeta1">
+                <div class="card w-75 mb-3">
+                    <div class="card-body d-flex">
+                        <img src="./img/uñas2.png" class="card-img" alt="...">
+                        <div class="d-flex flex-column">
+                            <h5 class="card-title">Manicuria</h5>
+                            <p class="card-text">Con los servicios de uñas ya no tendrás excusa para lucir unas manos
+                                perfectas
+                                en cualquier
+                                momento. Elegimos cada sistema según sea conveniente. Con nuestras técnicas de
+                                aplicación y
+                                productos, la durabilidad y la belleza están garantizadas, tomando además el tratamiento
+                                más
+                                cómodo y rentable indicado para vos. La manicura complementa tu imagen, sea cual sea tu
+                                estilo,
+                                y trasmite tu estilo personal a cuantos te rodean.</p>
+                            <button onclick="tiposUñas()" type="button" class="btn btn-primary">Sacar un Turno</button>
+                        </div>
+                    </div>
+                </div>
 
-            <div class="card w-75 mb-3">
-                <div class="card-body">
-                    <img src="./img/uñas2.png" class="card-img-top" alt="...">
-                    <h5 class="card-title">Manicuria</h5>
-                    <p class="card-text">Con los servicios de uñas ya no tendrás excusa para lucir unas manos perfectas
-                        en cualquier
-                        momento. Elegimos cada sistema según sea conveniente. Con nuestras técnicas de aplicación y
-                        productos, la durabilidad y la belleza están garantizadas, tomando además el tratamiento más
-                        cómodo y rentable indicado para vos. La manicura complementa tu imagen, sea cual sea tu estilo,
-                        y trasmite tu estilo personal a cuantos te rodean.</p>
-                    <button onclick="tiposUñas()" type="button" class="btn btn-primary">Sacar un Turno</button>
+            </div>
+            <div class="d-flex justify-content-center">
+                <div class="card w-75 mb-3 ">
+                    <div class="card-body d-flex ">
+                        <img src="./img/cejas.jpg" class="card-img" alt="...">
+                        <div class="d-flex flex-column">
+                            <h5 class="card-title">Servicio de Cejas</h5>
+                            <p class="card-text">Belleza en tu mirada con tratamientos y cuidados se consiguen unas
+                                cejas
+                                perfectas. Miradas definidas y duraderas, uno de los servicios más exclusivos que tiene
+                                como
+                                resultado una mirada penetrante y sorprendentemente natural. ¡Intensifica tu mirada!</p>
+                            <button onclick="tiposCejas()" type="button" class="btn btn-primary">Sacar un Turno</button>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="card w-75 mb-3">
-                <div class="card-body">
-                    <img src="./img/cejas.jpg" class="card-img-top" alt="...">
-                    <h5 class="card-title">Servicio de Cejas</h5>
-                    <p class="card-text">Belleza en tu mirada con tratamientos y cuidados se consiguen unas cejas
-                        perfectas. Miradas definidas y duraderas, uno de los servicios más exclusivos que tiene como
-                        resultado una mirada penetrante y sorprendentemente natural. ¡Intensifica tu mirada!</p>
-                    <button onclick="tiposCejas()" type="button" class="btn btn-primary">Sacar un Turno</button>
+            <div class="d-flex justify-content-center">
+                <div class="card w-75 mb-3">
+                    <div class="card-body d-flex">
+                        <img src="./img/pestañas" class="card-img" alt="...">
+                        <div class="d-flex flex-column">
+                            <h5 class="card-title">Servicio de Pestañas</h5>
+                            <p class="card-text"> Las extensiones de pestañas en EmmaBeauty están diseñadas para
+                                potenciar,
+                                perfeccionar, dar
+                                profundidad e intensificar la mirada de una forma natural. En Emma Beauty somos
+                                especialistas en
+                                servicios de pestañas, por lo que te ofrecemos un servicio totalmente innovador y
+                                diferente
+                                para
+                                tus pestañas además de nutritivo.</p>
+                            <button onclick="tiposPestañas()" type="button" class="btn btn-primary">Sacar un
+                                Turno</button>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="card w-75 mb-3">
-                <div class="card-body">
-                    <img src="./img/pestañas" class="card-img-top" alt="...">
-                    <h5 class="card-title">Servicio de Pestañas</h5>
-                    <p class="card-text"> Las extensiones de pestañas en EmmaBeauty están diseñadas para potenciar,
-                        perfeccionar, dar
-                        profundidad e intensificar la mirada de una forma natural. En Emma Beauty somos especialistas en
-                        servicios de pestañas, por lo que te ofrecemos un servicio totalmente innovador y diferente para
-                        tus pestañas además de nutritivo.</p>
-                    <button onclick="tiposPestañas()" type="button" class="btn btn-primary">Sacar un Turno</button>
-                </div>
             </div>
-        </div>
 
-        <script src="../emmabeauty/js/main.js"></script>
+            <script src="../emmabeauty/js/main.js"></script>
 </body>
 <footer class="footer ">
     <a href="https://www.instagram.com/" class="link-instagram" target="_blank"><img class="icon"
