carrito de compras y caambios

--- a/emmabeauty/index.html
+++ b/emmabeauty/index.html
@@ -52,7 +52,7 @@
                                 cómodo y rentable indicado para vos. La manicura complementa tu imagen, sea cual sea tu
                                 estilo,
                                 y trasmite tu estilo personal a cuantos te rodean.</p>
-                            <button onclick="tiposUñas()" type="button" class="btn btn-primary">Sacar un Turno</button>
+                           //cambiar <button onclick="tiposUñas()" type="button" class="btn btn-primary">Sacar un Turno</button>
                         </div>
                     </div>
                 </div>
