--- a/emmabeauty/index.html
+++ b/emmabeauty/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -19,9 +18,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style/style.css">
     <title>EmmaBeauty</title>
-
 </head>
-
 <body class="color-fondo">
     <nav class=" navbar-inicio navbar bg-body-tertiary">
         <div class="container-fluid">
@@ -32,7 +29,7 @@
     <section>
         <div class="banner">
             <h1 class=" texto-banner">Emma Beauty</h1>
-            <button onclick="servicios()" type="button" class="btn btn-dark">Click para ingresar</button>
+            <button onclick="servicios()" type="button" class="btn btn-dark">Click para ver servicios</button>
             </a>
         </div>
         <div class="tarjeta-index">
@@ -52,11 +49,11 @@
                                 cómodo y rentable indicado para vos. La manicura complementa tu imagen, sea cual sea tu
                                 estilo,
                                 y trasmite tu estilo personal a cuantos te rodean.</p>
-                           //cambiar <button onclick="tiposUñas()" type="button" class="btn btn-primary">Sacar un Turno</button>
+                             <button onclick="tiposUñas()" type="button" class="btn btn-primary">Sacar un
+                                Turno</button>
                         </div>
                     </div>
                 </div>
-
             </div>
             <div class="d-flex justify-content-center">
                 <div class="card w-75 mb-3 ">
@@ -95,14 +92,12 @@
                     </div>
                 </div>
             </div>
-            </div>
-
-            <script src="../emmabeauty/js/main.js"></script>
+        </div>
+        <script src="../emmabeauty/js/main.js"></script>
 </body>
 <footer class="footer ">
     <a href="https://www.instagram.com/" class="link-instagram" target="_blank"><img class="icon"
             src="./img/icons8-instagram (1).svg"></a>
     <a href="https://wa.link/axdlll" target="_blank"><img class="icon" src="./img/icons8-whatsapp (1).svg"></a>
 </footer>
-
 </html>
