--- a/emmabeauty/index.html
+++ b/emmabeauty/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -17,27 +18,51 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style/style.css">
-    <title>EmmaBeauty</title>
+    <title>Manicuria</title>
 </head>
+
 <body class="color-fondo">
+    <div id="miModal" class="modal">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Ingresa tu nombre</h5>
+                </div>
+                <div class="modal-body">
+                    <input id="inputNombre" type="text" placeholder="Nombre">
+                </div>
+                <div class="modal-footer">
+                    <button id="btnGuardar" type="button" class="btn btn-primary">Guardar</button>
+                </div>
+            </div>
+        </div>
+    </div>
     <nav class=" navbar-inicio navbar bg-body-tertiary">
         <div class="container-fluid">
             <img class="logo" src="../emmabeauty/img/icons8-cuidado-del-spa-64.png" alt="">
-            <span class="navbar-brand mb-0 h1"></span>
+            <div class="d-flex">
+                <a class="nav-item nav-link" href="./index.html">Inicio</a>
+                <a class="nav-item nav-link active" href="./Secciones/Manicuria.html">Manicuria <span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link" href="./Secciones/Pestañas.html">Pestañas</a>
+                <a class="nav-item nav-link" href="./Secciones/Cejas.html">Cejas</a>
+                <button class="btn" onclick="cerrarSesion()" id="closeSesion">Cerrar sesión</button>
+            </div>
+            <span class="navbar-brand mb-0 h1">
+            </span>
         </div>
     </nav>
     <section>
         <div class="banner">
-            <h1 class=" texto-banner">Emma Beauty</h1>
+            <h1 class="texto-banner">Emma Beauty</h1>
             <button onclick="servicios()" type="button" class="btn btn-dark">Click para ver servicios</button>
             </a>
         </div>
         <div class="tarjeta-index">
             <div class="d-flex justify-content-center tarjeta1">
-                <div class="card w-75 mb-3">
+                <div class="card card-cont w-75 mb-3">
                     <div class="card-body d-flex">
                         <img src="./img/uñas2.png" class="card-img" alt="...">
-                        <div class="d-flex flex-column">
+                        <div class="d-flex flex-column" id="targetElement">
                             <h5 class="card-title">Manicuria</h5>
                             <p class="card-text">Con los servicios de uñas ya no tendrás excusa para lucir unas manos
                                 perfectas
@@ -49,14 +74,14 @@
                                 cómodo y rentable indicado para vos. La manicura complementa tu imagen, sea cual sea tu
                                 estilo,
                                 y trasmite tu estilo personal a cuantos te rodean.</p>
-                             <button onclick="tiposUñas()" type="button" class="btn btn-primary">Sacar un
+                            <button onclick="tiposUñas()" type="button" class="btn btn-primary">Sacar un
                                 Turno</button>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="d-flex justify-content-center">
-                <div class="card w-75 mb-3 ">
+                <div class="card w-75 mb-3 card-cont">
                     <div class="card-body d-flex ">
                         <img src="./img/cejas.jpg" class="card-img" alt="...">
                         <div class="d-flex flex-column">
@@ -72,7 +97,7 @@
                 </div>
             </div>
             <div class="d-flex justify-content-center">
-                <div class="card w-75 mb-3">
+                <div class="card w-75 mb-3 card-cont" >
                     <div class="card-body d-flex">
                         <img src="./img/pestañas" class="card-img" alt="...">
                         <div class="d-flex flex-column">
@@ -100,4 +125,5 @@
             src="./img/icons8-instagram (1).svg"></a>
     <a href="https://wa.link/axdlll" target="_blank"><img class="icon" src="./img/icons8-whatsapp (1).svg"></a>
 </footer>
+
 </html>
