--- a/emmabeauty/Secciones/Manicuria.html
+++ b/emmabeauty/Secciones/Manicuria.html
@@ -21,7 +21,7 @@
     <title>Manicuria</title>
 </head>
 
-<body>
+<body class="color-fondo" >
     <nav class=" navbar-inicio navbar bg-body-tertiary">
         <div class="container-fluid">
             <img class="logo" src="../img/icons8-cuidado-del-spa-64.png" alt="">
@@ -39,39 +39,43 @@
     </nav>
     <div class="contenedor-tarjetas">
         <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="..." alt="Card image cap">
+            <img class="card-img-top" src="../img/semi-tarj.jpg" alt="imagen uñas Semipermanente">
             <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                    content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <h5 class="card-title">Semipermanente</h5>
+                <p class="card-text">El esmaltado semipermanente es un sistema de duración corta, entorno 2-3 semanas, sin hacer extensión de la uña.</p>
+                <h5 class="info-hora">🕘Hora aprox: 2.5HS</h5>
+                <h5 class="info-precio">💵Precio: $2000</h5>
+                <a href="#" class="btn btn-primary">Agregar al carrito</a>
             </div>
         </div>
         <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="..." alt="Card image cap">
+            <img class="card-img-top" src="../img/kapping-tarj.jpg" alt="Card image cap">
             <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <h5 class="card-title">Kapping</h5>
+                <p class="card-text">La manicura kapping consiste en aplicar una fina capa de acrílico o gel fortificador sobre la uña que actúa como una barrera protectora</p>
+                <h5 class="info-hora">🕘Hora aprox: 3HS</h5>
+                <h5  class="info-precio">💵Precio: $2500</h5>
+                <a href="#" class="btn btn-primary">Agregar al carrito</a>
             </div>
         </div>
         <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="..." alt="Card image cap">
+            <img class="card-img-top" src="../img/esculpidas.tarj" alt="Card image cap">
             <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <h5 class="card-title">Esculpidas</h5>
+                <p class="card-text">Las uñas esculpidas son extensiones que se construyen a partir de la uña natural con material acrílico o gel</p>
+                <h5 class="info-hora">🕘Hora aprox: 4.5HS</h5>
+                <h5  class="info-precio" >💵Precio: $4000</h5>
+                <a href="#" class="btn btn-primary">Agregar al carrito</a>
             </div>
         </div>
         <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="..." alt="Card image cap">
+            <img class="card-img-top" src="../img/manicuria-rusa-tarj.jpg" alt="Card image cap">
             <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                    content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <h5 class="card-title">Manicuria Rusa</h5>
+                <p class="card-text">La manicura rusa se realiza en seco y se centra en las cutículas.</p>
+                <h5 class="info-hora">🕘Hora aprox: 2HS</h5>
+                <h5  class="info-precio">💵Precio: $1500</h5>
+                <a href="#" class="btn btn-primary">Agregar al carrito</a>
             </div>
         </div>
     </div>
