--- a/emmabeauty/Secciones/Cejas.html
+++ b/emmabeauty/Secciones/Cejas.html
@@ -13,15 +13,24 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
-    <link rel="icon" href="../emmabeauty/img/favicon.png">
+    <link rel="icon" href="../img/faviconceja.png">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style/style.css">
-    <title>Manicuria</title>
+    <title>Cejas</title>
 </head>
 
 <body class="color-fondo" >
+    <button class="floating-button" onclick="openModal()"><img src="../img/icons8-carro-favorito-24.png" alt="Carrito" width="30"
+        height="30"></button>
+<div id="modal" class="modal">
+    <div class="modal-content">
+        <span class="close" onclick="closeModal()">&times;</span>
+        <h2>Tu carrito de servicios seleccionados</h2>
+        <p>Aquí puedes agregar tus elementos de compra y contenido adicional.</p>
+    </div>
+</div>
     <nav class=" navbar-inicio navbar bg-body-tertiary">
         <div class="container-fluid">
             <img class="logo" src="../img/icons8-cuidado-del-spa-64.png" alt="">
@@ -52,17 +61,17 @@
             <img class="card-img-top" src="../img/henna-tarj.jpg" alt="Card image cap">
             <div class="card-body">
                 <h5 class="card-title">Henna</h5>
-                <p class="card-text"> es un pigmento orgánico que se utiliza para el tintado de cejas.</p>
+                <p class="card-text"> Es un pigmento orgánico que se utiliza para el tintado de cejas.</p>
                 <h5 class="info-hora">🕘Hora aprox: 1HS</h5>
                 <h5  class="info-precio">💵Precio: $1500</h5>
-                <a href="#" class="btn btn-primary">Agregar al carrito</a>
+                <a  href="#" class="btn btn-primary">Agregar al carrito</a>
             </div>
         </div>
         <div class="card" style="width: 18rem;">
             <img class="card-img-top" src="../img/laminado-tarj.jpg" alt="Card image cap">
             <div class="card-body">
                 <h5 class="card-title">Laminado</h5>
-                <p class="card-text"> tratamiento semipermanente que se aplica sobre el vello de la ceja y consigue un efecto de ceja “peinada” hacia arriba, alisando el pelo más rebelde y fijando la forma deseada</p>
+                <p class="card-text"> Tratamiento semipermanente que se aplica sobre el vello de la ceja y consigue un efecto de ceja “peinada” hacia arriba, alisando el pelo más rebelde y fijando la forma deseada</p>
                 <h5 class="info-hora">🕘Hora aprox: 2HS</h5>
                 <h5  class="info-precio" >💵Precio: $3000</h5>
                 <a href="#" class="btn btn-primary">Agregar al carrito</a>
