--- a/emmabeauty/index.html
+++ b/emmabeauty/index.html
@@ -18,10 +18,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style/style.css">
-    <title>Manicuria</title>
+    <title>Inicio</title>
 </head>
 
 <body class="color-fondo">
+    <button class="floating-button" onclick="openModal()"><img src="./img/icons8-carro-favorito-24.png" alt="Carrito" width="30"
+            height="30"></button>
+    <div id="modal" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal()">&times;</span>
+            <h2>Tu carrito de servicios seleccionados</h2>
+            <p>Aquí puedes agregar tus elementos de compra y contenido adicional.</p>
+        </div>
+    </div>
     <div id="miModal" class="modal">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -42,7 +51,8 @@
             <img class="logo" src="../emmabeauty/img/icons8-cuidado-del-spa-64.png" alt="">
             <div class="d-flex">
                 <a class="nav-item nav-link" href="./index.html">Inicio</a>
-                <a class="nav-item nav-link active" href="./Secciones/Manicuria.html">Manicuria <span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link active" href="./Secciones/Manicuria.html">Manicuria <span
+                        class="sr-only">(current)</span></a>
                 <a class="nav-item nav-link" href="./Secciones/Pestañas.html">Pestañas</a>
                 <a class="nav-item nav-link" href="./Secciones/Cejas.html">Cejas</a>
                 <button class="btn" onclick="cerrarSesion()" id="closeSesion">Cerrar sesión</button>
@@ -97,7 +107,7 @@
                 </div>
             </div>
             <div class="d-flex justify-content-center">
-                <div class="card w-75 mb-3 card-cont" >
+                <div class="card w-75 mb-3 card-cont">
                     <div class="card-body d-flex">
                         <img src="./img/pestañas" class="card-img" alt="...">
                         <div class="d-flex flex-column">
