--- a/emmabeauty/Secciones/Cejas.html
+++ b/emmabeauty/Secciones/Cejas.html
@@ -58,7 +58,7 @@
                 <p class="card-text">Consiste en el diseño y modelado de las cejas de acuerdo con la estructura de tu rostro, tus ojos y nariz.</p>
                 <h5 class="info-hora">🕘Hora aprox: 0.5 HS</h5>
                 <h5 class="info-precio">💵Precio: $1500</h5>
-                <a href="#" class="btn btn-primary">Agregar al carrito</a>
+                <a href="#" onclick="verCarrito()" class="btn btn-primary">Agregar al carrito</a>
             </div>
         </div>
         <div class="card" style="width: 18rem;">
