--- a/emmabeauty/Secciones/Pestañas.html
+++ b/emmabeauty/Secciones/Pestañas.html
@@ -58,7 +58,7 @@
                 <p class="card-text">Es un tratamiento que eleva la curvatura de tus pestañas, resaltando la expresión de la mirada y alargando las pestañas desde la raíz, sin utilizar pelo sintético..</p>
                 <h5 class="info-hora">🕘Hora aprox: 3HS</h5>
                 <h5 class="info-precio">💵Precio: $2500</h5>
-                <a href="#" class="btn btn-primary">Agregar al carrito</a>
+                <a href="#" onclick="tiposPestañas()" class="btn btn-primary">Agregar al carrito</a>
             </div>
         </div>
         <div class="card" style="width: 18rem;">
@@ -68,7 +68,7 @@
                 <p class="card-text"> A cada pelo de tu pestaña se añade uno nuevo de material sintético o seda pegado con un pegamento especial y con una técnica llevada a cabo por una profesional.</p>
                 <h5 class="info-hora">🕘Hora aprox: 4HS</h5>
                 <h5  class="info-precio">💵Precio: $3000</h5>
-                <a href="#" class="btn btn-primary">Agregar al carrito</a>
+                <a href="#" onclick="tiposPestañas()" class="btn btn-primary">Agregar al carrito</a>
             </div>
         </div>
     </div>
