carrito terminado mediodia

--- a/emmabeauty/index.html
+++ b/emmabeauty/index.html
@@ -39,9 +39,13 @@
                             <p class="card-small-info">Precio: $XX</p>
                             <p class="card-small-info">Hora aprox: XX:XX</p>
                         </div>
+                        <div class="card-small-delete">
+                            <button class="delete-button" onclick="eliminarTarjeta()">
+                                <img src="./img/icons8-basura-llena-24.png" alt="Eliminar" width="24" height="24">
+                            </button>
+                        </div>
                     </div>
                 </div>
-                <div class="divider"></div>
                 <div class="card-small">
                     <div class="card-small-content">
                         <div class="card-small-image">
@@ -52,9 +56,13 @@
                             <p class="card-small-info">Precio: $XX</p>
                             <p class="card-small-info">Hora aprox: XX:XX</p>
                         </div>
+                        <div class="card-small-delete">
+                            <button class="delete-button" onclick="eliminarTarjeta()">
+                                <img src="./img/icons8-basura-llena-24.png" alt="Eliminar" width="24" height="24">
+                            </button>
+                        </div>
                     </div>
                 </div>
-                <div class="divider"></div>
                 <div class="card-small">
                     <div class="card-small-content">
                         <div class="card-small-image">
@@ -64,23 +72,25 @@
                             <h5 class="card-small-title">Semipermanente</h5>
                             <p class="card-small-info">Precio: $XX</p>
                             <p class="card-small-info">Hora aprox: XX:XX</p>
+                        </div>
+                        <div class="card-small-delete">
+                            <button class="delete-button" onclick="eliminarTarjeta()">
+                                <img src="./img/icons8-basura-llena-24.png" alt="Eliminar" width="24" height="24">
+                            </button>
                         </div>
                     </div>
                 </div>
             </div>
-
             <div class="modal-buttons">
-                <button onclick="finalizarPedido()" type="button" class="btn btn-primary btn-sm">FinalizarPedido</button>
+                <button onclick="finalizarPedido()" type="button" class="btn btn-primary btn-sm boton-fin">Finalizar
+                    Pedido</button>
                 <button onclick="vaciarCarrito()" type="button" class="btn btn-primary btn-sm">Vaciar Carrito</button>
                 <div class="icons">
                     <span>🕘:</span>
                     <span>💵:</span>
                 </div>
             </div>
-
         </div>
-    </div>
-    </div>
     </div>
     <div id="miModal" class="modal">
         <div class="modal-dialog">
