--- a/emmabeauty/index.html
+++ b/emmabeauty/index.html
@@ -145,9 +145,10 @@
                                 cómodo y rentable indicado para vos. La manicura complementa tu imagen, sea cual sea tu
                                 estilo,
                                 y trasmite tu estilo personal a cuantos te rodean.</p>
-                            <a href="./Secciones/Manicuria.html"></a>
-                            <button type="button" class="btn btn-primary">Sacar un
-                                Turno</button>
+                            <a href="./Secciones/Manicuria.html">
+                                <button type="button" class="btn btn-primary">Sacar un
+                                    Turno</button>
+                            </a>
                         </div>
                     </div>
                 </div>
