--- a/emmabeauty/Secciones/Manicuria.html
+++ b/emmabeauty/Secciones/Manicuria.html
@@ -65,7 +65,7 @@
                 <p class="card-text">El esmaltado semipermanente es un sistema de duración corta, entorno 2-3 semanas, sin hacer extensión de la uña.</p>
                 <h5 class="info-hora">🕘Hora aprox: 2.5HS</h5>
                 <h5 class="info-precio">💵Precio: $2000</h5>
-                <a href="#" class="btn btn-primary">Agregar al carrito</a>
+                <a href="#" onclick="agregarServicio(1, ServiciosUñas)" class="btn btn-primary">Agregar al carrito</a>
             </div>
         </div>
         <div class="card" style="width: 18rem;">
@@ -75,7 +75,7 @@
                 <p class="card-text">La manicura kapping consiste en aplicar una fina capa de acrílico o gel fortificador sobre la uña que actúa como una barrera protectora</p>
                 <h5 class="info-hora">🕘Hora aprox: 3HS</h5>
                 <h5  class="info-precio">💵Precio: $2500</h5>
-                <a href="#" class="btn btn-primary">Agregar al carrito</a>
+                <a href="#" onclick="agregarServicio(2, ServiciosUñas)" class="btn btn-primary">Agregar al carrito</a>
             </div>
         </div>
         <div class="card" style="width: 18rem;">
@@ -85,7 +85,7 @@
                 <p class="card-text">Las uñas esculpidas son extensiones que se construyen a partir de la uña natural con material acrílico o gel</p>
                 <h5 class="info-hora">🕘Hora aprox: 4.5HS</h5>
                 <h5  class="info-precio" >💵Precio: $4000</h5>
-                <a href="#" class="btn btn-primary">Agregar al carrito</a>
+                <a href="#"  onclick="agregarServicio(3, ServiciosUñas)"class="btn btn-primary">Agregar al carrito</a>
             </div>
         </div>
         <div class="card" style="width: 18rem;">
@@ -95,7 +95,7 @@
                 <p class="card-text">La manicura rusa se realiza en seco y se centra en las cutículas.</p>
                 <h5 class="info-hora">🕘Hora aprox: 2HS</h5>
                 <h5  class="info-precio">💵Precio: $1500</h5>
-                <a href="#" class="btn btn-primary">Agregar al carrito</a>
+                <a href="#" onclick="agregarServicio(4, ServiciosUñas)" class="btn btn-primary">Agregar al carrito</a>
             </div>
         </div>
     </div>
